Phase I of responding to MR's bug report

--- a/additional_code_types/config.json
+++ b/additional_code_types/config.json
@@ -5,9 +5,9 @@
             "title": "Find and edit additional code types",
             "title_create": "Create a new additional code type",
             "title_edit": "Edit additional code type",
+            "title_view": "Additional code type {additional_code_type_id}",
             "url_edit": "./create_edit.html?mode=update&additional_code_type_id={additional_code_type_id}",
             "url_view": "./view.html?mode=view&additional_code_type_id={additional_code_type_id}",
-            "title_view": "Additional code type {additional_code_type_id}",
             "validate": false,
             "inset": "View existing additional code types. Alternatively, <a class='govuk-link' href='create_edit.html'>create a new additional code type</a>.",
             "freetext_fields": "acd.description|ac.additional_code_type_id",
@@ -112,7 +112,7 @@
                 "control_type": "select_control",
                 "label": "Select the application code",
                 "label_style": "govuk-label--m",
-                "hint_text": "The application code indicates to which data type the footnote type applies.",
+                "hint_text": "The application code indicates to which data type the footnote type applies. Please use application code 1 in all circumstances for new additional code types, unless Meursing codes are resurrected",
                 "control_name": "application_code",
                 "dataset": "",
                 "default_value": "",
@@ -126,7 +126,7 @@
                 "control_type": "date_picker_control",
                 "label": "When does this additional code type enter into force?",
                 "label_style": "govuk-label--m",
-                "hint_text": "Any measures that are due to start before this date will not be able to use this additional code type.",
+                "hint_text": "Any measures that are due to start before this date will not be able to use additional codes of this type.",
                 "control_name": "validity_start_date",
                 "default": "",
                 "required": true
