--- a/additional_codes/config.json
+++ b/additional_codes/config.json
@@ -2,16 +2,15 @@
     "additional_codes": {
         "config": {
             "title": "Find and edit additional codes",
+            "title_create": "Create a new additional code",
+            "title_edit": "Edit additional code",
+            "title_view": "Additional code {additional_code_type_id}{additional_code}",
             "inset": "Enter criteria to help find an additional code. Alternatively, <a class='govuk-link' href='./create_edit.html'>create a new additional code</a>.",
             "freetext_fields": "description|additional_code_type_id+additional_code",
             "default_sort_fields": "additional_code_type_id|additional_code",
             "object_name": "Additional codes",
-            "title_create": "Create a new additional code",
-            "xtitle_edit": "Edit additional code {additional_code_type_id}{additional_code}",
-            "title_edit": "Edit additional code",
             "url_edit": "./create_edit.html?mode=update&additional_code_type_id={additional_code_type_id}&additional_code={additional_code}&additional_code_sid={additional_code_sid}",
             "url_view": "./view.html?mode=view&additional_code_type_id={additional_code_type_id}&additional_code={additional_code}&additional_code_sid={additional_code_sid}",
-            "title_view": "Additional code {additional_code_type_id}{additional_code}",
             "description_keys": "additional_code_sid|additional_code_type_id|additional_code",
             "validate": false,
             "buttons": {
@@ -31,7 +30,7 @@
                 },
                 {
                     "label": "Additional code",
-                    "value": "{additional_code}"
+                    "value": "{additional_code_type_id}{additional_code}"
                 },
                 {
                     "label": "Current description",
