--- a/global_tariff/config.json
+++ b/global_tariff/config.json
@@ -1,13 +1,13 @@
 {
     "goods_nomenclatures": {
         "config": {
-            "title": "Find and edit commodity codes",
-            "inset": "Enter criteria to help find a commodity code.",
+            "title": "The UK Global Tariff",
+            "inset": "",
             "freetext_fields": "description|gn.goods_nomenclature_item_id",
             "default_sort_fields": "goods_nomenclature_item_id|producline_suffix",
             "object_name": "Goods nomenclatures",
-            "title_create": "Create a new goods nomenclature",
-            "title_edit": "Edit goods nomenclature",
+            "title_create": "The UK Global Tariff",
+            "title_edit": "The UK Global Tariff",
             "description_keys": "goods_nomenclature_sid|goods_nomenclature_item_id",
             "validate": true,
             "buttons": {
@@ -18,6 +18,12 @@
                 "cancel_button_text": "Cancel",
                 "cancel_button_href": "./"
             }
+        },
+        "heading_texts": {
+            "section 1": "Some content for section 1 - <b>Lorem ipsum dolor sit amet</b>, consectetur adipiscing elit.<br /><br />An hoc usque quaque, aliter in vita? Quis istud possit, inquit, negare? Huius ego nunc auctoritatem sequens idem faciam. Quis istum dolorem timet? Duo Reges: constructio interrete. Quare attende, quaeso. Tecum optime, deinde etiam cum mediocri amico.",
+            "01": "Some content for chapter 01 - Live animals text goes here",
+            "0101": "Some content for heading 0101 - Horses, asses and mules text goes here.",
+            "2933": "Some content for heading 2933 - Chemical stuff."
         },
         "form": [
             {
