--- a/certificates/config.json
+++ b/certificates/config.json
@@ -2,16 +2,15 @@
     "certificates": {
         "config": {
             "title": "Find and edit certificates",
+            "title_create": "Create a new certificate",
+            "title_edit": "Edit certificate",
+            "title_view": "Certificate {certificate_type_code}{certificate_code}",
             "inset": "Enter criteria to help find a certificate. Alternatively, <a class='govuk-link' href='/certificates/create_edit.html'>create a new certificate</a>.",
             "freetext_fields": "description|certificate_type_code+certificate_code",
             "default_sort_fields": "certificate_code",
             "object_name": "Certificates",
-            "title_create": "Create a new certificate",
-            "xtitle_edit": "Edit certificate {certificate_type_code}{certificate_code}",
-            "title_edit": "Edit certificate",
             "url_edit": "./create_edit.html?mode=update&certificate_type_code={certificate_type_code}&certificate_code={certificate_code}",
             "url_view": "./view.html?mode=view&certificate_type_code={certificate_type_code}&certificate_code={certificate_code}",
-            "title_view": "Certificate {certificate_type_code}{certificate_code}",
             "description_keys": "certificate_type_code|certificate_code",
             "validate": false,
             "buttons": {
@@ -27,7 +26,7 @@
             "fields": [
                 {
                     "label": "Certificate code",
-                    "value": "{certificate_code}"
+                    "value": "{certificate_type_code}{certificate_code}"
                 },
                 {
                     "label": "Certificate type code",
