--- a/measures/config.json
+++ b/measures/config.json
@@ -57,7 +57,7 @@
                 "submit_button_text_edit": "Continue to core measure data",
                 "save_progress_button_text": "",
                 "cancel_button_text": "Cancel",
-                "cancel_button_href": "./"
+                "cancel_button_href": "./measure_activity_actions.html?action=cancel"
             }
         },
         "view": {
@@ -291,7 +291,7 @@
                 "submit_button_text_edit": "Continue to core measure data",
                 "save_progress_button_text": "",
                 "cancel_button_text": "Cancel",
-                "cancel_button_href": "./"
+                "cancel_button_href": "./measure_activity_actions.html?action=cancel"
             }
         },
         "form": [
@@ -407,7 +407,7 @@
                 "submit_button_text_edit": "Continue to select commodities",
                 "save_progress_button_text": "Save progress",
                 "cancel_button_text": "Cancel",
-                "cancel_button_href": "./"
+                "cancel_button_href": "./measure_activity_actions.html?action=cancel"
             }
         },
         "form": [
@@ -577,7 +577,7 @@
                 "submit_button_text_edit": "Continue to enter conditions",
                 "save_progress_button_text": "Save progress",
                 "cancel_button_text": "Cancel",
-                "cancel_button_href": "./"
+                "cancel_button_href": "./measure_activity_actions.html?action=cancel"
             }
         },
         "form": [
@@ -594,7 +594,7 @@
                 "control_scope": "",
                 "label": "Please list the commodity codes to which this measure will apply",
                 "label_style": "govuk-label--m",
-                "hint_text": "Type or paste a list of 10-digit commodity codes into the box below. Separate individual codes with a space, tab or line break. If you don't know which code(s) you need, please search on the&nbsp;<a class='govuk-link nw' target='_blank' href='https://www.gov.uk/trade-tariff'>Trade Tariff</a> tool.",
+                "hint_text": "Type or paste a list of 10-digit commodity codes into the box below. Separate individual codes with a space, tab or line break. If you don't know which code(s) you need, please search on the gov.uk&nbsp;<a class='govuk-link nw' target='_blank' href='https://www.gov.uk/trade-tariff'>Trade Tariff lookup</a> tool.",
                 "control_name": "commodity_codes",
                 "rows": 12,
                 "pattern": "[0-9]{10}",
@@ -617,47 +617,12 @@
                 "group_class": "additional_codes_group"
             },
             {
-                "control_type": "xradio_control",
-                "label": "Will the applicable duties be the same for all commodities?",
-                "label_style": "govuk-fieldset__legend--m",
-                "hint_text": "If all combinations of commodity codes and additional codes will have the precise same duties, please select&nbsp;'Yes'. Otherwise, please select&nbsp;'No' and modify the duties on the following screen.",
-                "control_name": "duties_same_for_all_commodities",
-                "dataset": "",
-                "selected": "",
-                "default": "1",
-                "radio_control_style": "inline",
-                "required": true,
-                "disabled_on_edit": true,
-                "group_class": "suited_for_duties"
-            },
-            {
-                "control_type": "xinput_control",
-                "label": "Enter certificate list",
-                "label_style": "govuk-label--m",
-                "hint_text": "If the duties are dependent on the certification provided, please enter up to two certificates in the box below, separated by commas if required. If the user puts anything in here, the system will create conditions of condition code 'A' if it is a trade remedy. So what do we do on the conditions page??",
-                "control_name": "certificate_list",
-                "control_style": "govuk-input--width-30 xcertificate",
-                "size": 255,
-                "maxlength": 255,
-                "pattern": "",
-                "required": true,
-                "default": "",
-                "disabled_on_edit": true,
-                "custom_errors": "",
-                "group_class": "suited_for_duties"
-            },
-            {
                 "control_type": "hidden_control",
                 "control_name": "action",
                 "value": "permutations"
             },
             {
                 "control_type": "button_cluster_control"
-            },
-            {
-                "control_type": "xinclude_control",
-                "control_scope": "",
-                "path": "/measures/includes/duty_notes.html"
             }
         ],
         "filters": [
@@ -753,10 +718,12 @@
             "buttons": {
                 "heading_text": "Next steps",
                 "submit_button_text_create": "Continue to apply footnotes",
+                "submit_button_id": "continue_duty_prototype",
                 "submit_button_text_edit": "Continue to apply footnotes",
                 "save_progress_button_text": "Save progress",
+                "save_progress_button_id": "save_progress_duty_prototype",
                 "cancel_button_text": "Cancel",
-                "cancel_button_href": "./"
+                "cancel_button_href": "./measure_activity_actions.html?action=cancel"
             }
         },
         "form": [
@@ -769,6 +736,11 @@
                 "control_type": "hidden_control",
                 "control_name": "action",
                 "value": "duties"
+            },
+            {
+                "control_type": "hidden_control",
+                "control_name": "table_data",
+                "value": ""
             },
             {
                 "control_type": "button_cluster_control"
@@ -870,7 +842,7 @@
                 "submit_button_text_edit": "Continue to enter duties",
                 "save_progress_button_text": "Save progress",
                 "cancel_button_text": "Cancel",
-                "cancel_button_href": "./"
+                "cancel_button_href": "./measure_activity_actions.html?action=cancel"
             }
         },
         "form": [
@@ -913,14 +885,19 @@
             "validate": false,
             "buttons": {
                 "heading_text": "Next steps",
-                "submit_button_text_create": "Add measures to workbasket",
-                "submit_button_text_edit": "Add measures to workbasket",
+                "submit_button_text_create": "Continue to summary",
+                "submit_button_text_edit": "Continue to summary",
                 "save_progress_button_text": "Save progress",
                 "cancel_button_text": "Cancel",
-                "cancel_button_href": "./"
+                "cancel_button_href": "./measure_activity_actions.html?action=cancel"
             }
         },
         "form": [
+            {
+                "control_type": "inset_control",
+                "control_scope": "",
+                "text": "Use this form to add one or more footnotes to the measures that you are creating.[WORKBASKET_ACTIVITY]"
+            },
             {
                 "control_type": "error_block"
             },
@@ -962,14 +939,14 @@
                 "submit_button_text_edit": "Add measures to workbasket",
                 "save_progress_button_text": "Save progress",
                 "cancel_button_text": "Cancel",
-                "cancel_button_href": "./"
+                "cancel_button_href": "./measure_activity_actions.html?action=cancel"
             }
         },
         "form": [
             {
                 "control_type": "inset_control",
                 "control_scope": "",
-                "text": "Please check the details that you have entered before proceeding."
+                "text": "Please check the details that you have entered before proceeding.[WORKBASKET_ACTIVITY]"
             },
             {
                 "control_type": "include_control",
