--- a/goods_nomenclatures/config.json
+++ b/goods_nomenclatures/config.json
@@ -2,13 +2,14 @@
     "goods_nomenclatures": {
         "config": {
             "title": "Find and edit commodity codes",
-            "title_create": "Create a new goods nomenclature",
-            "title_edit": "Edit goods nomenclature",
-            "title_view": "View commodity code {goods_nomenclature_item_id}",
+            "title_create": "Create a new commodity code",
+            "title_edit": "Edit commodity code",
+            "title_view": "Commodity {goods_nomenclature_item_id}",
+            "url_view": "/goods_nomenclatures/view.html?mode=view&goods_nomenclature_sid={goods_nomenclature_sid}&goods_nomenclature_item_id={goods_nomenclature_item_id}&productline_suffix={productline_suffix}",
             "inset": "Enter criteria to help find a commodity code.",
             "freetext_fields": "description|gn.goods_nomenclature_item_id",
             "default_sort_fields": "goods_nomenclature_item_id|producline_suffix",
-            "object_name": "Goods nomenclatures",
+            "object_name": "Commodity codes",
             "description_keys": "goods_nomenclature_sid|goods_nomenclature_item_id",
             "validate": true,
             "buttons": {
@@ -23,66 +24,61 @@
         "form": [
             {
                 "control_type": "inset_control",
-                "control_scope": "",
-                "text": "Dolore sint incididunt ut nisi. Laborum duis sunt fugiat incididunt adipisicing irure excepteur nisi labore amet ad qui velit. Enim id laboris eu voluptate qui. Fugiat eu nulla ex aute aute voluptate velit duis veniam fugiat deserunt eiusmod. Ea est sit aliquip incididunt.[WORKBASKET]"
+                "control_scope": "insert",
+                "text": "Use this form to create a new commodity code.[WORKBASKET]"
+            },
+            {
+                "control_type": "inset_control",
+                "control_scope": "update",
+                "text": "Use this form to edit the details of an existing commodity code. If you would like to terminate the commodity code, please enter the termination date below.[WORKBASKET]"
             },
             {
                 "control_type": "error_block"
             },
             {
                 "control_type": "input_control",
-                "label": "Commodity code",
+                "label": "Enter the commodity code",
                 "label_style": "govuk-label--m",
-                "hint_text": "Enter the 10-digit commodity code that identifies this item",
+                "hint_text": "Enter the 10-digit commodity code that identifies this item.",
                 "control_name": "goods_nomenclature_item_id",
-                "control_style": "govuk-!-width-one-quarter",
+                "control_style": "govuk-input--width-10",
                 "size": 10,
                 "maxlength": 10,
                 "pattern": "[0-9]{10}",
                 "required": true,
                 "default": "",
-                "disabled_on_edit": true,
+                "disabled_on_edit": false,
                 "custom_errors": ""
             },
             {
                 "control_type": "input_control",
-                "label": "Product line suffix",
+                "label": "Enter the product line suffix",
                 "label_style": "govuk-label--m",
-                "hint_text": "Enter the 2-digit product line suffix",
-                "control_name": "goods_nomenclature_item_id",
-                "control_style": "govuk-!-width-one-quarter",
+                "hint_text": "Enter the 2-digit product line suffix (PLS). The product line suffix field identifies if the commodity code is potentially declarable or just an intermediate 'header' line. Enter '80' to identify a potentially declarable line or any other value to indicate that the commodity is a header line.",
+                "control_name": "producline_suffix",
+                "control_style": "govuk-input--width-2",
                 "size": 2,
                 "maxlength": 2,
                 "pattern": "[0-9]{2}",
                 "required": true,
                 "default": "",
-                "disabled_on_edit": true,
+                "disabled_on_edit": false,
                 "custom_errors": ""
             },
             {
-                "control_type": "include_control",
-                "control_scope": "",
-                "path": "/includes/goods_nomenclatures/help_productline_suffix.html"
-            },
-            {
                 "control_type": "input_control",
-                "label": "Indent",
+                "label": "Enter this commodity code's indent",
                 "label_style": "govuk-label--m",
-                "hint_text": "Lorem ipsum",
-                "control_name": "indent",
-                "control_style": "govuk-!-width-one-quarter",
+                "hint_text": "The indent field is used to show parental relationships between one commodity code and its neighbours. For instance a commodity code with an indent of 2 will be the 'child' of a commodity code with an indent of 1 that appears immediately above it.",
+                "control_name": "number_indents",
+                "control_style": "govuk-input--width-2",
                 "size": 2,
                 "maxlength": 2,
                 "pattern": "[0-9]{2}",
                 "required": true,
                 "default": "",
-                "disabled_on_edit": true,
+                "disabled_on_edit": false,
                 "custom_errors": ""
-            },
-            {
-                "control_type": "include_control",
-                "control_scope": "",
-                "path": "/includes/goods_nomenclatures/help_indent.html"
             },
             {
                 "control_type": "date_picker_control",
@@ -116,14 +112,14 @@
             },
             {
                 "control_type": "include_control",
-                "control_scope": "",
+                "control_scope": "insert",
                 "path": "/includes/common/formatting_help.html"
             },
             {
                 "control_type": "button_cluster_control"
             },
             {
-                "control_type": "detail_table_control",
+                "control_type": "xdetail_table_control",
                 "control_name": "goods_nomenclature_descriptions",
                 "control_scope": "update",
                 "caption": "Descriptions"
